<resources>
    <string name="category_selection">Select the category you want to pick from.</string>
    <string name="app_name">FoodFly</string>
    <string name="foreign">Foreign Dishes</string>
    <string name="indigenous">Indigenous Dishes</string>
    <string name="drinks">Drinks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="landing">Welcome to the Second Activity</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create a new account</string>
    <string name="forgot_p">Forgot Password?</string>
    <string name="name">FoodyFly</string>
    <string name="version">0.1.0</string>
    <string name="welcome_lgoin">Welcome, Login to get started.</string>
    <string name="agreement"> I agree to your </string>
    <string name="terms">terms and conditions.</string>
    <string name="category">Select an item to view its details</string>
    <string name="food_title">FRIED MEAT</string>
    <string name="food_description">Have you ever imagined frying a chicken with its life in it. This is the meal for you</string>
    <string name="price">$100</string>
    <string name="lorem">Youve probably heard of Lorem Ipsum before – its the most-used dummy text excerpt out there. People use it because it has a fairly normal distribution of letters and words (making it look like normal English), but its also Latin, which means your average reader wont get distracted by trying to read it. Its perfect for showcasing design work as it should look when fleshed out with text, because it allows viewers to focus on the design work itself, instead of the text. Its also a great way to showcase the functionality of programs like word processors, font types, and more.
    Weve taken Lorem Ipsum to the next level with our HTML-Ipsum tool. As you can see, this Lorem Ipsum is tailor-made for websites and other online projects that are based in HTML. Most web design projects use Lorem Ipsum excerpts to begin with, but you always have to spend an annoying extra minute or two formatting it properly for the web.
    Maybe you have a custom-styled ordered list you want to show off, or maybe you just want a long chunk of Lorem Ipsum that’s already wrapped in paragraph tags. No matter the need, we’ve put together a number of Lorem Ipsum samples ready to go with HTML tags and formatting in place. All you have to do is click the heading of any section on this page, and that HTML-Ipsum block is copied to your clipboard and ready to be loaded into a website redesign template, brand new design mockup, or any other digital project you might need dummy text for.
    No matter the project, please remember to replace your fancy HTML-Ipsum with real content before you go live - this is especially important if youre planning to implement a content-based marketing strategy for your new creation! Lorem Ipsum text is all well and good to demonstrate a design or project, but if you set a website loose on the Internet without replacing dummy text with relevant, high quality content, youll run into all sorts of potential Search Engine Optimization issues like thin content, duplicate content, and more.</string>
</resources>
