<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@drawable/food"
            />
        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:text="@string/food_title"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/food_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/food_description"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/food_price"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="@string/price"
            android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>