<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/food11"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:id="@+id/login_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/welcome_lgoin"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:text="Email"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:hint="Enter your email address here."
            android:textSize="12sp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:text="Password"/>

        <EditText
            android:id="@+id/login_password"
            android:hint="Enter your password here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="textPassword"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgot_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/forgot_p"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:text="@string/forgot_p"
            android:textColor="@color/primary_text"
            />
        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="59dp"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/primary_text"
            android:text="@string/create_account"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlt_bg"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:textAlignment="center"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:background="@color/accent">

        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/accent"
            android:text="@string/login"
            android:textColor="@color/background"
            android:textSize="18dp"
            />

    </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>